SERVER-74568: SdamServerSelector sometimes doesn't fully respect client readPreference for config shard